meegotouchhome (0.22.11~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 20 Dec 2010 10:59:05 +0200

meegotouchhome (0.22.10-1) unstable; urgency=low

  * Fixes: Fixed _MEEGOTOUCH_VISIBLE_IN_SWITCHER to be set to 0 when window gets removed from switcher but is not destroyed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 20 Dec 2010 10:58:03 +0200

meegotouchhome (0.22.9-1) unstable; urgency=low

  * Fixes: NB#204272 - In arabic I don't see any running apps in app page

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 30 Nov 2010 11:58:24 +0200

meegotouchhome (0.22.8-1) unstable; urgency=low

  * Fixes: NB#204512 - Change pinch gesture handling to use totalScaleFactor instead of scaleFactor
  * Fixes: NB#206700 - minimizing window, meegotouchhome crashes
  * Fixes: NB#202350 - Application without _NET_WM_STATE_SKIP_TASKBAR is not visible in the switcher

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 25 Nov 2010 16:54:00 +0200

meegotouchhome (0.22.7-1) unstable; urgency=low

  * Fixes: NB#202259 - Each MotionEvent causes _NET_WM_ICON_GEOMETRY update for a window in switcher

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 22 Nov 2010 17:53:26 +0200

meegotouchhome (0.22.6-1) unstable; urgency=low

  * Fixes: NB#203728 - Recents view freezes and shows only weird minimal icons

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 12 Nov 2010 11:41:26 +0200

meegotouchhome (0.22.5-1) unstable; urgency=low

  * Fixes: NB#202257 - Device reboots after pressing Ctrl-q four times

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Nov 2010 14:31:11 +0300

meegotouchhome (0.22.4-1) unstable; urgency=low

  * Fixes: NB#190081 - call and search applications open on using hkb keys(* and ')') quickly in home screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 28 Oct 2010 16:50:13 +0300

meegotouchhome (0.22.3-1) unstable; urgency=low

  * Don't rotate the screen while switcher mode change is in progress
