@@ -1,6 +1,7 @@
 meegotouchhome (0.22.11~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#208911 - Edit mode of Recents (Switcher) view should exit when status menu or any dialog comes on top.
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 20 Dec 2010 10:59:05 +0200
 
